The number of unread alerts now appears in the page title. Added the Back to Site link to Nox's Control Panel. Added the panel_group_menu template and used it to de-dupe the group menu HTML. Fixed a potential race condition with dismiss alert. Fixed a strange bug where new alerts wouldn't appear. Fixed a race condition where client templates sometimes wouldn't load. Dramatically cut down on the number of DOM rebuilds for the alert list. Added some missing error handling for ajax page block loads. Fixed a bug where the dimiss alert endpoint wasn't sending a success payload.
Made the register_might_be_machine phrase more descriptive.
Added the panel_menu_aria phrase.

--- a/templates/panel_group_edit.html
+++ b/templates/panel_group_edit.html
@@ -1,16 +1,6 @@
 {{template "header.html" . }}
 <div class="colstack panel_stack">
-<nav class="colstack_left" aria-label="The control panel menu">
-	<div class="colstack_item colstack_head">
-		<div class="rowitem"><a href="/panel/groups/edit/{{.ID}}">{{lang "panel_group_menu_head"}}</a></div>
-	</div>
-	<div class="colstack_item rowmenu">
-		<div class="rowitem passive"><a href="/panel/groups/edit/{{.ID}}">{{lang "panel_group_menu_general"}}</a></div>
-		<div class="rowitem passive"><a>{{lang "panel_group_menu_promotions"}}</a></div>
-		<div class="rowitem passive"><a href="/panel/groups/edit/perms/{{.ID}}">{{lang "panel_group_menu_permissions"}}</a></div>
-	</div>
-{{template "panel_inner_menu.html" . }}
-</nav>
+{{template "panel_group_menu.html" . }}
 <main class="colstack_right">
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><h1>{{.Name}}{{lang "panel_group_head_suffix"}}</h1></div>
