--- a/templates/panel_menu.html
+++ b/templates/panel_menu.html
@@ -1,1 +1,1 @@
-<nav class="colstack_left" aria-label="The control panel menu">{{template "panel_inner_menu.html" . }}</nav>
+<nav class="colstack_left" aria-label="{{lang "panel_menu_aria"}}">{{template "panel_inner_menu.html" . }}</nav>
