--- a/templates/panel_debug.html
+++ b/templates/panel_debug.html
@@ -2,6 +2,7 @@
 <div class="colstack panel_stack">
 {{template "panel_menu.html" . }}
 	<main id="panel_dashboard_right" class="colstack_right">
+{{template "panel_before_head.html" . }}
 		<div class="colstack_item colstack_head">
 			<div class="rowitem"><h1>{{lang "panel_debug_head"}}</h1></div>
 		</div>
