--- a/templates/panel_forum_edit_perms.html
+++ b/templates/panel_forum_edit_perms.html
@@ -3,6 +3,7 @@
 {{template "panel_menu.html" . }}
 
 <main class="colstack_right">
+{{template "panel_before_head.html" . }}
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><h1>{{.Name}}{{lang "panel_forum_head_suffix"}}</h1></div>
 	</div>
