--- a/templates/panel_forums.html
+++ b/templates/panel_forums.html
@@ -8,6 +8,7 @@
 </script>
 
 <main class="colstack_right">
+{{template "panel_before_head.html" . }}
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><h1>{{lang "panel_forums_head"}}</h1></div>
 	</div>
