--- a/templates/panel_group_edit_perms.html
+++ b/templates/panel_group_edit_perms.html
@@ -2,6 +2,7 @@
 <div class="colstack panel_stack">
 {{template "panel_group_menu.html" . }}
 <main class="colstack_right">
+{{template "panel_before_head.html" . }}
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><h1>{{.Name}}{{lang "panel_group_head_suffix"}}</h1></div>
 	</div>
