--- a/templates/panel_groups.html
+++ b/templates/panel_groups.html
@@ -3,6 +3,7 @@
 
 {{template "panel_menu.html" . }}
 <main class="colstack_right">
+{{template "panel_before_head.html" . }}
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><h1>{{lang "panel_groups_head"}}</h1></div>
 	</div>
