--- a/templates/panel_pages_edit.html
+++ b/templates/panel_pages_edit.html
@@ -2,6 +2,7 @@
 <div id="panel_page_edit" class="colstack panel_stack">
 {{template "panel_menu.html" . }}
 <main class="colstack_right">
+{{template "panel_before_head.html" . }}
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><h1>{{lang "panel_pages_edit_head"}}</h1></div>
 	</div>
