--- a/templates/panel_themes.html
+++ b/templates/panel_themes.html
@@ -11,6 +11,7 @@
 </style>
 
 <main class="colstack_right">
+{{template "panel_before_head.html" . }}
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><h1>{{lang "panel_themes_primary_themes"}}</h1></div>
 	</div>
