--- a/templates/panel_themes_menus_item_edit.html
+++ b/templates/panel_themes_menus_item_edit.html
@@ -4,6 +4,7 @@
 {{/** TODO: Write the backend code and JS code for saving this menu **/}}
 {{template "panel_menu.html" . }}
 <main class="colstack_right">
+{{template "panel_before_head.html" . }}
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><h1>{{lang "panel_themes_menus_edit_head"}}</h1></div>
 	</div>
