--- a/templates/panel_themes_widgets.html
+++ b/templates/panel_themes_widgets.html
@@ -13,6 +13,7 @@ type Widget struct {
 <div class="colstack panel_stack">
 {{template "panel_menu.html" . }}
 	<main class="colstack_right">
+{{template "panel_before_head.html" . }}
 		<div class="colstack_item colstack_head">
 			<div class="rowitem"><h1>{{lang "panel_themes_widgets_head"}}</h1></div>
 		</div>
