--- a/themes/nox/public/panel.css
+++ b/themes/nox/public/panel.css
@@ -24,8 +24,37 @@
 .menu_stats {
 	margin-left: 4px;
 }
-.back_to_site {
+/*.back_to_site {
 	font-size: 18px;
+}*/
+.above_right {
+	background-color: rgb(62, 62, 62);
+	margin-top: -12px;
+	margin-left: -24px;
+	margin-right: -24px;
+	display: flex;
+}
+.above_right .left_bit {
+	padding-left: 20px;
+	margin-top: 16px;
+	font-size: 18px;
+}
+.above_right .right_bit {
+	margin-left: auto;
+	display: flex;
+	background-color: rgb(72, 72, 72);
+	padding-top: 12px;
+	padding-bottom: 12px;
+	padding-right: 20px;
+	padding-left: 20px;
+}
+.above_right img {
+	border-radius: 24px;
+}
+.above_right span {
+	margin-left: 12px;
+	margin-top: 5px;
+	color: rgb(180, 180, 180);
 }
 
 .colstack_right {
