--- a/themes/nox/public/panel.css
+++ b/themes/nox/public/panel.css
@@ -18,8 +18,10 @@
 {{template "acc_panel_common.css" }}
 .colstack_left .colstack_head {
 	font-size: 19px;
-	padding-top: 10px;
-	padding-bottom: 10px;
+	/*padding-top: 10px;
+	padding-bottom: 10px;*/
+	padding-top: 12px;
+	padding-bottom: 12px;
 }
 .menu_stats {
 	margin-left: 4px;
@@ -120,8 +122,10 @@
 }
 
 #panel_users .rowitem {
+	padding-top: 20px;
 	padding-left: 4px;
 	padding-right: 4px;
+	padding-bottom: 18px;
 }
 button, .formbutton, .panel_right_button:not(.has_inner_button), #panel_users .profile_url {
 	background: rgb(100,100,200);
