--- a/themes/shadow/public/main.css
+++ b/themes/shadow/public/main.css
@@ -888,6 +888,11 @@ input[type=checkbox]:checked + label.poll_option_label .sel {
 	background-color: rgb(71,71,71);
 	padding: 10px;
 }
+blockquote {
+	background-color: rgb(71,71,71);
+	margin: 0px;
+	padding: 10px;
+}
 
 /* Profiles */
 #profile_left_lane {
