Use #container instead of .container for Cosora. Added six parser tests.

--- a/themes/cosora/public/main.css
+++ b/themes/cosora/public/main.css
@@ -57,7 +57,7 @@ body, #main {
 	padding-left: 8px;
 	padding-right: 8px;
 }
-.container {
+#container {
 	background-color: var(--element-background-color);
 }
 
