--- a/themes/cosora/public/main.css
+++ b/themes/cosora/public/main.css
@@ -255,7 +255,7 @@ ul {
 .colstack_head h1 {
 	font-size: 18px;
 }
-h1, h2, h3 {
+h1, h2, h3, h4, h5 {
 	-webkit-margin-before: 0;
 	-webkit-margin-after: 0;
 	margin-block-start: 0;
@@ -1066,6 +1066,17 @@ blockquote:first-child {
 }
 .post_item .user_content {
 	margin-bottom: 10px;
+}
+.user_content h2, .user_content h3 {
+	margin-bottom: 12px;
+	font-weight: normal;
+}
+.user_content h4 {
+	margin-bottom: 8px;
+	font-weight: normal;
+}
+.user_content strong h2, .user_content strong h3, .user_content strong h4 {
+	font-weight: bold;
 }
 .button_container {
 	margin-top: auto;
