--- a/themes/shadow/public/main.css
+++ b/themes/shadow/public/main.css
@@ -183,7 +183,7 @@ a {
 	font-size: 16px;
 	display: inline;
 }
-h1, h2, h3 {
+h1, h2, h3, h4, h5 {
 	-webkit-margin-before: 0;
 	-webkit-margin-after: 0;
 	margin-block-start: 0;
@@ -265,6 +265,20 @@ h1, h2, h3 {
 }
 .user_content {
 	word-break: break-word;
+}
+.user_content h2 {
+	font-size: 18px;
+}
+.user_content h2, .user_content h3 {
+	margin-bottom: 12px;
+	display: block;
+}
+.user_content h4 {
+	margin-bottom: 8px;
+	display: block;
+}
+.user_content strong h2, .user_content strong h3, .user_content strong h4 {
+	font-weight: bold;
 }
 
 .controls {
