--- a/themes/tempra_simple/public/main.css
+++ b/themes/tempra_simple/public/main.css
@@ -152,7 +152,7 @@ li a {
 #back {
 	display: flex;
 }
-#main {
+#back, #main {
 	width: 100%;
 }
 main > *:last-child {
@@ -257,13 +257,15 @@ main > *:last-child {
 }
 .rowhead h1, .colstack_head h1,
 .rowhead h2, .colstack_head h2 {
+	font-size: 16px;
+	margin-left: 4px;
+}
+h1, h2, h3, h4, h5 {
 	-webkit-margin-before: 0;
 	-webkit-margin-after: 0;
 	margin-block-start: 0;
 	margin-block-end: 0;
 	font-weight: normal;
-	font-size: 16px;
-	margin-left: 4px;
 }
 
 .rowitem {
@@ -667,6 +669,25 @@ button.username {
 }
 .post_item > .mod_button > button:hover {
 	opacity: 0.9;
+}
+
+.user_content h2 {
+	font-size: 19px;
+}
+.user_content h3 {
+	font-size: 18px;
+}
+.user_content h4 {
+	font-size: 17px;
+}
+.user_content h2, .user_content h3 {
+	margin-bottom: 12px;
+}
+.user_content h4 {
+	margin-bottom: 8px;
+}
+.user_content strong h2, .user_content strong h3, .user_content strong h4 {
+	font-weight: bold;
 }
 
 .user_tag {
