Use the langpack's isocode in header.html instead of en.
Added the GetLangPack function.

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html{{if .Header.IsoCode}} lang="{{.Header.IsoCode}}"{{end}}>
 	<head>
 		<title>{{.Title}} | {{.Header.Site.Name}}</title>
 		{{range .Header.Stylesheets}}
